pkg/ibmvpc/examples/out/explain_out/QueryConnectionSGBasic5_all_vpcs_explain_debug.txt
Explaining connectivity from vsi1-ky to vsi3a-ky within test-vpc1-ky using "protocol: UDP src-ports: 10-100 dst-ports: 443"
===========================================================================================================================

No connections from vsi1-ky[10.240.10.4] to vsi3a-ky[10.240.30.5] using "protocol: UDP src-ports: 10-100 dst-ports: 443";
connection is blocked both by ingress and egress

Egress: security group sg1-ky blocks connection; network ACL acl1-ky allows connection
Ingress: network ACL acl3-ky allows connection; security group sg3-ky blocks connection

Path:
	vsi1-ky[10.240.10.4] -> | security group sg1-ky |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg1-ky blocks connection since there are no relevant allow rules
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl3-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg3-ky blocks connection since there are no relevant allow rules

------------------------------------------------------------------------------------------------------------------------
